📝 (client): removed conformance.config.jsonc as it is no longer needed 🔧 (client): updated next.config.js to include a new domain for requested images 🔧 (client): added a proxy configuration to client/package.json to handle API requests ♻️ (client): modified several pages to replace CourseIntructorLayout with CommingSoonLayout ♻️ (client): modified layout.tsx to wrap content with LoggedInOnly component 🔧 (client): adjusted styles in globals.css to change color of pagination icons and buttons ✨ (client): added new icon.png file to project ♻️ (client): adjusted layout.tsx to remove redundant body element and add providers around children

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -28,7 +28,9 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+.MuiSvgIcon-root.MuiSvgIcon-fontSizeMedium.MuiPaginationItem-icon.css-g2z002-MuiSvgIcon-root-MuiPaginationItem-icon {
+  color: rgb(72, 72, 72);
+}
 #modal-root {
   /* Adjust width and height as needed */
 }
@@ -262,6 +264,12 @@ body {
   cursor: none;
 }
 #payment-form label {
+  color: white !important;
+}
+.css-19micn4-MuiButtonBase-root-MuiPaginationItem-root {
+  color: rgb(72, 72, 72) !important;
+}
+.css-19micn4-MuiButtonBase-root-MuiPaginationItem-root.Mui-selected {
   color: white !important;
 }
 input[type="number"]::-webkit-outer-spin-button,
